# sie

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
deploy/helm/sie-cluster/: Chart.yaml  README.md  values-aks.yaml  values-aws.yaml  values-gke.yaml  values.yaml
deploy/helm/sie-cluster/templates/: NOTES.txt  _helpers.tpl  _otel-collector-config.tpl  alloy-configmap.yaml  cluster-issuer.yaml  config-deployment.yaml  dashboard-configmaps.yaml  gateway-deployment.yaml  gateway-service.yaml  gpu-config.yaml  ingress.yaml  keda-lifecycle.yaml  keda-scaledobject.yaml  loki-datasource-configmap.yaml  mcp-edge-deployment.yaml  mcp-edge-ingress.yaml  mcp-edge-secret.yaml  mcp-edge-service.yaml  oauth2-proxy-ingress.yaml  otel-collector.yaml  otel-networkpolicy.yaml  prometheusrule.yaml  rbac.yaml  self-signed-issuer.yaml  serviceaccount.yaml  servicemonitor.yaml  tempo-datasource-configmap.yaml  trust-bundle.yaml  worker-image-prepull.yaml  worker-pdb.yaml  worker-service.yaml  worker-statefulset.yaml
deploy/k8s/: README.md  keda-scaledobject.yaml
examples/: README.md  quickstart.ipynb
examples/contract-review-agent/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
examples/contract-review-agent/contract_review_agent/: __init__.py  app.py  cli.py  config.py  guardrails.py  runtime.py  tools.py
examples/contract-review-agent/contract_review_agent/data/: __init__.py  fetch_contracts.py  make_sample.py  render.py
examples/document-ocr/: README.md
examples/document-to-markdown/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
examples/document-to-markdown/document_to_markdown/: __init__.py  config.py  convert.py  evaluate.py  fetch.py
examples/document-to-markdown/fixtures/: SOURCES.md
examples/document-to-markdown/tests/: test_config.py  test_evaluate.py
examples/ecommerce-product-search/typescript/: package.json
examples/insurance-claims-agent/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
examples/insurance-claims-agent/fixtures/: SOURCES.md  claim-note.txt  claim.json
examples/insurance-claims-agent/insurance_claims/: __init__.py  config.py  evaluate.py  fetch.py  prepare.py  review.py
examples/insurance-claims-agent/tests/: test_config.py  test_prepare.py  test_review.py
examples/retrieval-ablation/: README.md
examples/sie-hugging-face-mteb-semantic-search/: README.md
examples/sie-hugging-face-mteb-semantic-search/frontend/: package-lock.json
examples/stripe-link-fraud/: .env.example  .gitignore  README.md  compose.yml  package-lock.json  package.json  tsconfig.json
examples/stripe-link-fraud/data/: fraud_patterns.json  sample_orders.json
examples/stripe-link-fraud/src/: config.ts  events.ts  index-build.ts  risk.ts  types.ts
examples/stripe-link-fraud/web/: server.ts
examples/taxonomy-classification/: pyproject.toml
examples/vision-doc-rag/: .gitignore  README.md  config.yaml
examples/vision-doc-rag/data/: fetch_dataset.py  fetch_pdfs.py  render_pages.py
examples/vision-doc-rag/python/: ingest.py  requirements.txt  search.py  server.py
examples/vision-doc-rag/static/: index.html
examples/wine-recommender/: requirements.txt
examples/wine-recommender/app/: package-lock.json  package.json
integrations/sie_chroma/: pyproject.toml
integrations/sie_crewai/: pyproject.toml
integrations/sie_dspy/: pyproject.toml
integrations/sie_haystack/: README.md  pyproject.toml
integrations/sie_haystack/tests/: test_extractors.py
integrations/sie_lancedb/: pyproject.toml
integrations/sie_lancedb/tests/: test_integration.py
integrations/sie_langchain/: pyproject.toml
integrations/sie_langchain/tests/: test_embeddings.py
integrations/sie_llamaindex/: pyproject.toml
integrations/sie_qdrant/: pyproject.toml
integrations/sie_ts_chroma/: package.json
integrations/sie_ts_chroma/tests/: embedding.test.ts
integrations/sie_ts_lancedb/: package.json
integrations/sie_ts_lancedb/tests/: embedding.test.ts
integrations/sie_ts_langchain/: package.json
integrations/sie_ts_langchain/tests/: embeddings.test.ts  extractors.test.ts  rerankers.test.ts
integrations/sie_ts_llamaindex/: package.json
integrations/sie_ts_llamaindex/tests/: embedding.test.ts  extractors.test.ts  rerankers.test.ts
integrations/sie_weaviate/: pyproject.toml
integrations/sie_weaviate/tests/: conftest.py
(+18 files in other folders)
