[project]
name = "contract-review-agent"
version = "0.1.0"
description = "Contract review with the OpenAI Agents SDK, every model served from one SIE cluster"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # openai-agents >=0.14 pins websockets>=15 (for its realtime/voice features,
    # unused here) which conflicts with sie-sdk's websockets<15; 0.13.x is the
    # newest line compatible with the SIE SDK and has the same agent API.
    "openai-agents>=0.13,<0.14",
    "openai>=1.40",
    "sie-sdk>=0.6.8",
    "httpx>=0.27",
    "numpy>=1.26",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pillow>=10.3",
    "rich>=13.7",
]

[project.scripts]
fetch-contracts = "contract_review_agent.data.fetch_contracts:main"
make-sample = "contract_review_agent.data.make_sample:main"
review = "contract_review_agent.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
